chore: remove --enable-preview (fixes #1061)